# poetry-empty-file-repro

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: test.yml
