[tool.poetry]
name = "python-lambda"
version = "0.1.0"
description = "Modular Python Lambda"
authors = ["N/A <noreply@cvent.com>"]

[tool.poetry.dependencies]
aws-lambda-typing = "^2.10.1"
python = "^3.9"
boto3 = "^1.28.11"
botocore = "^1.31.11"
boto3-stubs = {version = "^1.28.11", extras = ["config", "securityhub", "events", "s3", "resourcegroupstaggingapi", "cloudformation", "ssm"]}
cattrs = "^23.1.2"
jira = "^3.5.2"
jira-python = "^0.2.4"
requests = "^2.31.0"
requests-auth-aws-sigv4 = "^0.7"
types-requests = "^2.31.0.2"
arnparse = "^0.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
